--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Library-Management
 server.servlet.context-path=/www.library.com/api
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/library_management
+spring.datasource.url=jdbc:mysql://mysqldb:3306/library_management
 spring.datasource.username=root
 spring.datasource.password=admin@123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
